# ontos

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.db.yml  docker-compose.yml  justfile  readme.md
diagrams/: voyager.excalidraw
migration/src/: m20220101_000001_create_table.rs
src/: lib.rs
src/database/: mod.rs
src/database/entities/: descriptions.rs  favicons.rs  ips.rs  mod.rs  players.rs  prelude.rs  servers.rs
src/scanner/: mod.rs  rescan.rs  worker.rs
src/scanner/http/: mod.rs  routes.rs
src/util/: logs.rs  misc.rs  mod.rs  types.rs
src/web/: mod.rs  server.rs
